added func of pause and improved rm a src from delete
